# sldl-remote

./: .gitignore  ARCHITECTURE.md  README.md  index.html  justfile  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml
src/: app.js  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: album_mode.rs  config.rs  jobs.rs  library.rs  mod.rs
src-tauri/src/models/: config.rs  job.rs  mod.rs
src-tauri/src/services/: config_manager.rs  crypto.rs  job_manager.rs  mod.rs  ssh.rs
src/services/: api.js
