[package]
name = "sldl-remote"
version = "0.1.0"
description = "Remote controller for sldl downloads"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "rt-multi-thread"] }
aes-gcm = "0.10"
rand = "0.8"
directories = "5"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
chrono = "0.4"
shell-escape = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
